Sizes user profile pictures. Styles friends lists. Makes buttons awesome. Fixes overflow issues.

--- a/app/assets/stylesheets/global.css
+++ b/app/assets/stylesheets/global.css
@@ -28,8 +28,9 @@ ul li {
 }
 
 .button {
-  background-color: #DBBDA9;
-  border: 1px solid #608D8F;
+  background-color: #202C47;
+  border: none;
+  color: #D6D6D6;
   font-family: 'Lato', sans-serif;
   font-weight: 400;
   font-size: 1em;
@@ -37,19 +38,34 @@ ul li {
   padding: 10px;
   bottom: 0;
   position: absolute;
+  text-align: center;
   transition: all .2s ease;
   width: 100%;
 }
 
 .button:hover {
-  background-color: #8E6989;
+  background-color: #344975;
   transition: all .2s ease;
-  -webkit-box-shadow:0px 0px 1px 0px #D8E7F5, inset 0px 0px 40px #EED0EE;
-       -moz-box-shadow:0px 0px 1px 0px #D8E7F5, inset 0px 0px 40px #EED0EE;
-            box-shadow:0px 0px 1px 0px #D8E7F5, inset 0px 0px 40px #EED0EE;
 }
 
 .strong {
   font-weight: bold
 }
 
+.book_selector {
+  background-color: #202C47;
+  border: none;
+  color: #D6D6D6;
+  font-family: 'Lato', sans-serif;
+  font-size: .75em;
+  font-weight: 100;
+  margin: 4% 0;
+  padding: 8px 5px;
+  text-align: center;
+  transition: all .2s ease;
+  width: 250px;
+}
+
+.book_selector:hover {
+  background-color: #3B5385;
+}
